tests/functional/lang/eval-fail-derivationStrict-7.err.exp
error:
       … while calling the 'derivationStrict' builtin
         at /pwd/lang/eval-fail-derivationStrict-7.nix:1:1:
            1| builtins.derivationStrict {
             | ^
            2|   name = "foo";

       … while evaluating derivation 'foo'
         whose name attribute is located at /pwd/lang/eval-fail-derivationStrict-7.nix:2:3

       … while evaluating attribute 'outputHashMode' of derivation 'foo'
         at /pwd/lang/eval-fail-derivationStrict-7.nix:4:3:
            3|   builder = 1;
            4|   outputHashMode = 15;
             |   ^
            5| }

       error: invalid value '15' for 'outputHashMode' attribute
